apps/web/src/app/styles.css
@import "tailwindcss";
@import "tw-animate-css";
/* @import "@acme/tailwind-config/theme"; */

/* @source "../../../../packages/ui/src/*.{ts,tsx}"; */

@custom-variant dark (&:where(.dark, .dark *));
@custom-variant light (&:where(.light, .light *));
@custom-variant auto (&:where(.auto, .auto *));

@utility container {
  margin-inline: auto;
  padding-inline: 2rem;
  @media (width >= --theme(--breakpoint-sm)) {
    max-width: none;
  }
  @media (width >= 1400px) {
    max-width: 1400px;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    letter-spacing: var(--tracking-normal);
  }
}

:root {
  --background: oklch(0.9875 0.0045 314.8053);
  --foreground: oklch(0.2277 0.0105 312.0161);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.2277 0.0105 312.0161);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.2277 0.0105 312.0161);
  --primary: oklch(0.5605 0.1911 350.0331);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.967 0.0106 316.4921);
  --secondary-foreground: oklch(0.4536 0.0226 309.5036);
  --muted: oklch(0.967 0.0106 316.4921);
  --muted-foreground: oklch(0.5653 0.021 306.4429);
  --accent: oklch(0.967 0.0106 316.4921);
  --accent-foreground: oklch(0.5605 0.1911 350.0331);
  --destructive: oklch(0.6368 0.2078 25.3313);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.9419 0.016 310.0997);
  --input: oklch(1 0 0);
  --ring: oklch(0.5605 0.1911 350.0331);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.967 0.0106 316.4921);
  --sidebar-foreground: oklch(0.4536 0.0226 309.5036);
  --sidebar-primary: oklch(0.5605 0.1911 350.0331);
  --sidebar-primary-foreground: oklch(1 0 0);
  --sidebar-accent: oklch(0.9419 0.016 310.0997);
  --sidebar-accent-foreground: oklch(0.5605 0.1911 350.0331);
  --sidebar-border: oklch(0.9155 0.0235 310.6964);
  --sidebar-ring: oklch(0.5605 0.1911 350.0331);
  --radius: 0.75rem;
  --shadow-2xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.03);
  --shadow-xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.03);
  --shadow-sm:
    0px 2px 10px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow:
    0px 2px 10px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow-md:
    0px 2px 10px 0px hsl(0 0% 0% / 0.05), 0px 2px 4px -1px hsl(0 0% 0% / 0.05);
  --shadow-lg:
    0px 2px 10px 0px hsl(0 0% 0% / 0.05), 0px 4px 6px -1px hsl(0 0% 0% / 0.05);
  --shadow-xl:
    0px 2px 10px 0px hsl(0 0% 0% / 0.05), 0px 8px 10px -1px hsl(0 0% 0% / 0.05);
  --shadow-2xl: 0px 2px 10px 0px hsl(0 0% 0% / 0.13);
  --tracking-normal: 0rem;
  --spacing: 0.25rem;

  @variant dark {
    --background: oklch(0.1836 0.0111 311.9111);
    --foreground: oklch(0.9788 0.0057 308.3962);
    --card: oklch(0.1836 0.0111 311.9111);
    --card-foreground: oklch(0.9788 0.0057 308.3962);
    --popover: oklch(0.1836 0.0111 311.9111);
    --popover-foreground: oklch(0.9788 0.0057 308.3962);
    --primary: oklch(0.6747 0.1492 345.9482);
    --primary-foreground: oklch(0.1836 0.0111 311.9111);
    --secondary: oklch(0.2551 0.0142 310.7968);
    --secondary-foreground: oklch(0.721 0.0184 308.1777);
    --muted: oklch(0.2551 0.0142 310.7968);
    --muted-foreground: oklch(0.6288 0.0177 309.9946);
    --accent: oklch(0.2551 0.0142 310.7968);
    --accent-foreground: oklch(0.6747 0.1492 345.9482);
    --destructive: oklch(0.3958 0.1331 25.723);
    --destructive-foreground: oklch(1 0 0);
    --border: oklch(0.2941 0.0175 310.1142);
    --input: oklch(0.2551 0.0142 310.7968);
    --ring: oklch(0.6747 0.1492 345.9482);
    --chart-1: oklch(0.6747 0.1492 345.9482);
    --chart-2: oklch(0.5605 0.1911 350.0331);
    --chart-3: oklch(0.4988 0.1668 350);
    --chart-4: oklch(0.4373 0.1428 349.7487);
    --chart-5: oklch(0.3738 0.1177 349.3988);
    --sidebar: oklch(0.2103 0.0107 311.9806);
    --sidebar-foreground: oklch(0.721 0.0184 308.1777);
    --sidebar-primary: oklch(0.6747 0.1492 345.9482);
    --sidebar-primary-foreground: oklch(0.1836 0.0111 311.9111);
    --sidebar-accent: oklch(0.2551 0.0142 310.7968);
    --sidebar-accent-foreground: oklch(0.6747 0.1492 345.9482);
    --sidebar-border: oklch(0.2941 0.0175 310.1142);
    --sidebar-ring: oklch(0.6747 0.1492 345.9482);
    --radius: 0.75rem;
    --shadow-2xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.1);
    --shadow-xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.1);
    --shadow-sm:
      0px 2px 10px 0px hsl(0 0% 0% / 0.2), 0px 1px 2px -1px hsl(0 0% 0% / 0.2);
    --shadow:
      0px 2px 10px 0px hsl(0 0% 0% / 0.2), 0px 1px 2px -1px hsl(0 0% 0% / 0.2);
    --shadow-md:
      0px 2px 10px 0px hsl(0 0% 0% / 0.2), 0px 2px 4px -1px hsl(0 0% 0% / 0.2);
    --shadow-lg:
      0px 2px 10px 0px hsl(0 0% 0% / 0.2), 0px 4px 6px -1px hsl(0 0% 0% / 0.2);
    --shadow-xl:
      0px 2px 10px 0px hsl(0 0% 0% / 0.2), 0px 8px 10px -1px hsl(0 0% 0% / 0.2);
    --shadow-2xl: 0px 2px 10px 0px hsl(0 0% 0% / 0.5);
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

::view-transition-old(root),
::view-transition-new(root) {
  animation: none;
  mix-blend-mode: normal;
}

@keyframes edge-flow {
  from {
    stroke-dashoffset: 16;
  }
  to {
    stroke-dashoffset: 0;
  }
}

.animate-edge-flow {
  animation: edge-flow 0.5s linear infinite;
}

